--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "dependencies": {
     "@whiskeysockets/baileys": "^6.7.15",
     "dotenv": "^16.4.7",
+    "firebase": "^11.4.0",
     "qrcode-terminal": "^0.12.0"
   },
   "scripts": {
