--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
   "dependencies": {
     "@whiskeysockets/baileys": "^6.7.15",
     "dotenv": "^16.4.7",
-    "firebase": "^11.4.0",
-    "qrcode-terminal": "^0.12.0"
+    "firebase": "^11.4.0"
   },
   "scripts": {
     "start": "node -r dotenv/config app.js",
@@ -22,11 +21,11 @@
     "format:check": "prettier --check ."
   },
   "devDependencies": {
-    "@eslint/js": "^9.21.0",
-    "eslint": "^8.57.1",
+    "@eslint/js": "^9.22.0",
     "eslint-config-prettier": "^10.1.1",
     "globals": "^16.0.0",
-    "prettier": "^3.5.3"
+    "prettier": "^3.5.3",
+    "qrcode-terminal": "^0.12.0"
   },
   "repository": {
     "type": "git",
