--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "license": "MIT",
   "packageManager": "pnpm@10.6.1",
   "dependencies": {
+    "@logtail/pino": "^0.5.2",
     "@whiskeysockets/baileys": "^6.7.15",
     "dotenv": "^16.4.7",
     "firebase": "^11.4.0",
